// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App route should be a function returning a route 1`] = `
<Route
  component={[Function]}
>
  <Route
    component={[Function]}
  >
    <Redirect
      from="/"
      to="balances"
    />
    <Route
      path="balances"
    >
      <IndexRoute
        component={[Function]}
      />
      <Route
        component={[Function]}
        path="details"
      />
    </Route>
    <Route
      path="categories"
    >
      <IndexRoute
        component={[Function]}
      />
      <Route
        component={[Function]}
        path=":categoryName/:subcategoryName"
      />
      <Route
        component={[Function]}
        path=":categoryName"
      />
    </Route>
    <Route
      path="recurrence"
    >
      <IndexRoute
        component={[Function]}
      />
      <Route
        component={[Function]}
        path=":bundleId"
      />
    </Route>
    <Route
      path="settings"
    >
      <Route
        component={[Function]}
        path="groups/new"
      />
      <Route
        component={[Function]}
        path="groups/:groupId"
      />
      <Route
        component={[Function]}
        path="accounts/:accountId"
      />
      <Route
        component={[Function]}
      >
        <IndexRoute
          component={[Function]}
        />
        <Route
          component={[Function]}
          path="accounts"
        />
        <Route
          component={[Function]}
          path="groups"
        />
        <Route
          component={[Function]}
          path="configuration"
        />
        <Route
          component={[Function]}
          path="debug"
        />
      </Route>
    </Route>
    <Route
      component={[Function]}
      path="transfers"
    />
    <Route
      component={[Function]}
      path="transfers/:slideName"
    />
    <Route
      component={[Function]}
      path="recurrencedebug"
    />
    <Redirect
      from="*"
      to="balances"
    />
  </Route>
</Route>
`;

exports[`App route should have renderExtraRoutes 1`] = `
<Route
  component={[Function]}
>
  <Route
    component={[Function]}
  >
    <Redirect
      from="/"
      to="balances"
    />
    <Route
      path="balances"
    >
      <IndexRoute
        component={[Function]}
      />
      <Route
        component={[Function]}
        path="details"
      />
    </Route>
    <Route
      path="categories"
    >
      <IndexRoute
        component={[Function]}
      />
      <Route
        component={[Function]}
        path=":categoryName/:subcategoryName"
      />
      <Route
        component={[Function]}
        path=":categoryName"
      />
    </Route>
    <Route
      path="recurrence"
    >
      <IndexRoute
        component={[Function]}
      />
      <Route
        component={[Function]}
        path=":bundleId"
      />
    </Route>
    <Route
      path="settings"
    >
      <Route
        component={[Function]}
        path="groups/new"
      />
      <Route
        component={[Function]}
        path="groups/:groupId"
      />
      <Route
        component={[Function]}
        path="accounts/:accountId"
      />
      <Route
        component={[Function]}
      >
        <IndexRoute
          component={[Function]}
        />
        <Route
          component={[Function]}
          path="accounts"
        />
        <Route
          component={[Function]}
          path="groups"
        />
        <Route
          component={[Function]}
          path="configuration"
        />
        <Route
          component={[Function]}
          path="debug"
        />
      </Route>
    </Route>
    <Route
      component={[Function]}
      path="transfers"
    />
    <Route
      component={[Function]}
      path="transfers/:slideName"
    />
    <Route
      component={[Function]}
      path="recurrencedebug"
    />
    <Route
      component={[Function]}
      path="extra-route"
    />
    <Redirect
      from="*"
      to="balances"
    />
  </Route>
</Route>
`;
